Bug 1681772 - Put an hard-coded but non-empty label for audio devices on Android. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D100929